--- a/backend/todo/requirements.txt
+++ b/backend/todo/requirements.txt
@@ -1,8 +1,10 @@
 black==19.10b0
 django==3.0.8
+django-allauth==0.42.0
 django-autoslug==1.9.8
 django-cors-headers==3.4.0
 django-extensions==2.2.9
 django-model-utils==4.0.0
+dj-rest-auth==1.1.0
 djangorestframework==3.11.0
 factory-boy==2.12.0
