--- a/backend/todo/requirements.txt
+++ b/backend/todo/requirements.txt
@@ -1,4 +1,5 @@
 black==19.10b0
+coreapi==2.3.3
 django==3.0.8
 django-allauth==0.42.0
 django-autoslug==1.9.8
@@ -8,3 +9,4 @@ django-model-utils==4.0.0
 dj-rest-auth==1.1.0
 djangorestframework==3.11.0
 factory-boy==2.12.0
+pyyaml==5.3.1
